--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,5 @@
-@import './Global.scss';
+@import "./Global.scss";
 
-
-@import './components/Header/Header.scss';
-@import './components/Footer/Footer.scss';
-@import './components/Menu/Menu.scss';
-
+@import "./components/Header/Header.scss";
+@import "./components/Footer/Footer.scss";
+@import "./components/Menu/Menu.scss";
