--- a/src/Global.scss
+++ b/src/Global.scss
@@ -13,7 +13,7 @@ a {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 button {
@@ -23,5 +23,4 @@ button {
 
 input {
   outline: none;
-
 }
