--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,4 @@
 @import "./components/Header/Header.scss";
 @import "./components/Footer/Footer.scss";
 @import "./components/Menu/Menu.scss";
+@import "./pages/Home/Slider/Slider.scss";
