--- a/src/App.scss
+++ b/src/App.scss
@@ -4,3 +4,4 @@
 @import "./components/Footer/Footer.scss";
 @import "./components/Menu/Menu.scss";
 @import "./pages/Home/Slider/Slider.scss";
+@import "./pages/Home/Search_block/Search.scss";
