--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -14,6 +14,10 @@
         cursor: pointer;
         &:hover {
           transform: scale(1.02);
+          border: 1px solid #f93e03;
+        }
+        &:hover h4 {
+          color: #f93e03;
         }
         img {
           width: 230px;
