--- a/src/App.scss
+++ b/src/App.scss
@@ -6,3 +6,4 @@
 @import "./pages/Home/Slider/Slider.scss";
 @import "./pages/Home/Search_block/Search.scss";
 @import "./pages/Promotion/Promotion.scss";
+@import "./pages/DetailPromotion/DetailPromotion.scss";
