--- a/src/pages/Promotion/Promotion.scss
+++ b/src/pages/Promotion/Promotion.scss
@@ -1,10 +1,36 @@
 #promotion {
   .promotion {
     .promotion-wrap {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      gap: 20px;
       &__block {
-        width: 200px;
-        height: 250px;
-        background: #7a7a7a;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        cursor: pointer;
+        border: 1px solid #ccc;
+        border-radius: 15px;
+        width: 280px;
+        height: 180px;
+        position: relative;
+        transition: 0.4s;
+        bottom: 0;
+        &:hover {
+          bottom: 10px;
+        }
+        img {
+          width: 100%;
+          margin: 10px 0;
+        }
+        h1 {
+          text-transform: uppercase;
+          padding: 0 7px;
+          font-size: 16px;
+          text-align: center;
+          font-weight: 500;
+        }
       }
     }
   }
